--- a/Website/Content/Site.css
+++ b/Website/Content/Site.css
@@ -813,46 +813,50 @@ section.package .side img {
 
 #contentsNav {
     float: left;
-    width: 35%;
+    width: 28%;
+    height: 400px;
+    padding: 5px;
     margin-bottom: 50px;
+    border: 1px solid darkgray;
+    overflow: auto;
 }
 
-#metadata > h3 { margin-bottom: 15px; }
-
-#metadata .toplabel { vertical-align: top; }
+#metadata .toplabel { 
+    vertical-align: top; 
+}
 
 #contents {
     float: right;
-    width: 60%;
+    width: 68%;
     margin-bottom: 50px;
+    padding: 5px;
+    height: 400px;
+    border: 1px solid darkgray;
+    overflow: auto;
 }
 
-#contents > h3 { margin-bottom: 15px; }
+#contents .header 
+{
+    font-size: 1.1em;
+}
 
-img.packageicon { vertical-align: top; }
+img.packageicon { 
+    vertical-align: top; 
+    width: 50px;
+    height: 50px;
+}
 
 #fileContentContainer {
     display: none;
 }
 
-#fileContentArea
-{
-    width: 100%;
-    margin: 10px 10px 10px 10px;
-    height: 300px;
-    background-color: lightgray;
-}
-
 #fileImageBorder {
     border: 1px solid blue;
+    width: 100%;
     display: none;
 }
 
-#downloadFileLink {
-    margin-left: 10px;
-}
-
-    /* Pager */
+/* Pager */
 
 ul.pager {
     font-size: 1.5em;
