--- a/Website/Content/Site.css
+++ b/Website/Content/Site.css
@@ -814,11 +814,15 @@ section.package .side img {
 #contentsNav {
     float: left;
     width: 28%;
-    height: 400px;
+    height: 450px;
     padding: 5px;
     margin-bottom: 50px;
     border: 1px solid darkgray;
     overflow: auto;
+}
+
+#metadataLabel {
+    font-size: 1.1em;
 }
 
 #metadata .toplabel { 
@@ -829,10 +833,11 @@ section.package .side img {
     float: right;
     width: 68%;
     margin-bottom: 50px;
-    padding: 5px;
-    height: 400px;
+    padding: 5px 5px 0px 5px;
+    height: 450px;
     border: 1px solid darkgray;
     overflow: auto;
+    position: relative;
 }
 
 #contents .header 
@@ -850,9 +855,24 @@ img.packageicon {
     display: none;
 }
 
-#fileImageBorder {
-    border: 1px solid blue;
-    width: 100%;
+#progressMessage {
+    background-color: lightyellow;
+    padding: 10px 2px 10px 20px;
+    border: 1px solid gray;
+    display: none;
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    right: 50px;
+    z-index: 100;
+    font-size: 1.2em;
+}
+
+#fileImage {
+    border: 1px solid gray;
+    margin-top: 10px;
+    max-height: 400px;
+    max-width: 400px;
     display: none;
 }
 
